<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HopeWorldWide</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login"> Login</string>
    <string name="menu"> Home</string>
    <string name="username"> Username</string>
    <string name="password"> Password</string>

    <string name="name">Name: </string>
    <string name="height">Height: </string>
    <string name="heightValue">Enter Height</string> <!-- height hint -->
    <string name="weight">Weight: </string>
    <string name="weightHint">Enter Weight</string> <!-- weight hint -->
    <string name="mySearch">Search</string>
    <string name="logout">Logout</string>
    <string name="update">Update Child</string>

    <string name="age">Age: </string>
    <string name="calculate">Calculate</string>
    <string name="currentBMI">Current BMI: </string>
    <string name="previousBMI">Previous BMI: </string>
     <string name="AutoCompleteTextView"></string>
     
     <string name="cm">cm</string>
      <string name="kg">kg</string>
       <string name="hopeworldwide">     \t\t Hope \n         World Wide</string>
       
       <string name="Login">Login</string> <!-- text in the login button -->
       <string name="login2">Login</string><!-- name of the login page  -->
       <string name="bmi">BMI Calculator</string> <!-- name of the page that calculate bmi -->
       
       <string name="landing">Hope World Wide</string>
       
       <!-- landing page buttons -->
        <string name="lButton1">BMI Calculator</string>
        <string name="lButton2">Add Child</string>
        <string name="lButton3">Synchronize Data</string>
        
        <string name="search">Enter Name</string>
        
      
</resources>
